--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <meta charset="utf-8" /> 
         <title>Election Simulator v2</title>
         <link data-trunk rel="scss" href="style.scss">
+        <link data-trunk rel="rust" data-bin="vsim2">
     </head>
 </html>
